// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forces yarn client, local deps, and console debugging if DEBUG_PROJECT_CREATION is set 1`] = `
Object {
  "author": "bar",
  "dependencies": Object {
    "@magento/venia-ui": "file:///Volumes/CaseSensitive/pwa-studio/packages/venia-ui/venia-ui.tgz",
  },
  "description": "A new project based on @magento/venia-concept",
  "devDependencies": Object {
    "@magento/peregrine": "file:///Volumes/CaseSensitive/pwa-studio/packages/peregrine/peregrine.tgz",
  },
  "license": "UNLICENSED",
  "name": "foo",
  "optionalDependencies": Object {
    "no-package": "0.0.1",
  },
  "private": true,
  "resolutions": Object {
    "@magento/peregrine": "file:///Volumes/CaseSensitive/pwa-studio/packages/peregrine/peregrine.tgz",
    "@magento/venia-ui": "file:///Volumes/CaseSensitive/pwa-studio/packages/venia-ui/venia-ui.tgz",
  },
  "scripts": Object {
    "build": "yarn run clean && yarn run validate-queries && yarn run build:prod",
  },
  "version": "0.0.1",
}
`;

exports[`outputs custom package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "build": "yarn run clean && yarn run validate-queries && yarn run build:prod",
  },
  "version": "0.0.1",
}
`;

exports[`outputs npm package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "build": "npm run clean && npm run validate-queries && npm run build:prod",
  },
  "version": "0.0.1",
}
`;
